# binguistics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  test.yml
src/binguistics/: card.py
tests/: test_card.py
