[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "binguistics"
authors = [{ name = "Kazuya Takahashi" }]
description = "Bingo"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Games/Entertainment :: Board Games",
]
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.hatch]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
xfail_strict = true

[tool.ruff]
ignore = []
line-length = 88
select = ["E", "F", "W"]
